Botoes segunda via

--- a/src/app/acordos-andamento/acordos-andamento.component.html
+++ b/src/app/acordos-andamento/acordos-andamento.component.html
@@ -1,4 +1,23 @@
-<accordion [isAnimated]="true" [closeOthers]="true">
+<div *ngIf="sucessoEmail" class="mb-15">
+    <h1>E-mail enviado com sucesso!</h1>
+</div>
+  
+<div *ngIf="porEmail">
+    <p class="text-center">Para qual e-mail enviar seu boleto?</p>
+    <app-input-email (clickEnviar)="enviarEmail()" (clickVoltar)="voltarEmail()"></app-input-email>
+</div>
+  
+<div *ngIf="sucessoSms" class="mb-15">
+  <h1>SMS enviado com sucesso!</h1>
+</div>
+
+<div *ngIf="porSms">
+  <p class="text-center">Para qual número enviar o SMS?</p>
+  <app-input-tel (clickEnviar)="enviarSms()" (clickVoltar)="voltarSms()"></app-input-tel>
+</div>
+
+
+<accordion [isAnimated]="true" [closeOthers]="true" *ngIf="accDividas">
    
     <accordion-group *ngFor="let acordo of acordos">
         <button class="btn btn-link btn-block clearfix btn-accordion" accordion-heading>
@@ -22,20 +41,33 @@
          <p class="font-weight-bold">Parcelas</p>
           <div *ngIf="acordo.ParcelasAcordo.ParcelaAcordo.length">
             <div *ngFor="let par of acordo.ParcelasAcordo.ParcelaAcordo; let ind = index" class="row bottom-parcela">
-                    <div class="col-6 col-md-3 no-padd-left no-padd-right">
-                        Data: {{ par.DataVencimento }}
+                    <div class="col-6 col-md-2">
+                         {{ par.DataVencimento }}
                     </div>
-                    <div class="col-6 col-md-3 no-padd-right">
+                    <div class="col-6 col-md-2 no-padd-right bottom-parcela">
                         Status: {{ par.StatusParcelaAcordo }}
                     </div>
-                    <div class="col-6 col-md-2 valor-mobile">
+                    <div class="col-4 col-md-2 no-padd-right">
                         R$ {{ par.ValorParcela }}
                     </div>
-                    <div class="col-4 col-md-2 no-padd-left">
-                        <a type="button" class="btn btn-primary padd-mobile btn-segunda" (click)="segunda_via(acordo.CodigoAcordo, par.CodigoParcelaAcordo, acordo.NumeroTitulo, ind)">
-                            Segunda via do boleto        
+                    <div class="col-4 col-md-2 no-padd-right">
+                        <a type="button" class="btn btn-primary padd-mobile btn-segunda" (click)="segunda_via(acordo.CodigoAcordo, par.CodigoParcelaAcordo, acordo.CodigoTitulo, ind)">
+                            Ver segunda via do boleto        
                         </a>
                         <div class="erro-boleto" *ngIf="erroBoleto">Houve um erro. Tente novamente, por favor.</div>
+                    </div>
+                    <div class="col-4 col-md-2 no-padd-right">
+                        <a type="button" class="btn btn-primary padd-mobile btn-segunda" (click)="pegarEmail(ind)">
+                            Enviar por e-mail        
+                        </a>                          
+                        <div class="erro-boleto" *ngIf="erroBoleto">Houve um erro. Tente novamente, por favor.</div>  
+                    </div>
+                    
+                    <div class="col-4 col-md-2 no-padd-right">
+                        <a type="button" class="btn btn-primary padd-mobile btn-segunda" (click)="pegarTelefone(ind, acordo.CodigoAcordo, acordo.CodigoTitulo)">
+                            Enviar por SMS        
+                        </a>                          
+                        <div class="erro-boleto" *ngIf="erroBoleto">Houve um erro. Tente novamente, por favor.</div>  
                     </div>
                     <div class="col-2 col-md-1">
                         <div class="loader-wrap">
@@ -45,18 +77,31 @@
             </div>
          </div>
          <div *ngIf="acordo.ParcelasAcordo.ParcelaAcordo.CodigoParcelaAcordo" class="row">
-                    <div class="col-6 col-md-3">
-                            Data: {{ acordo.ParcelasAcordo.ParcelaAcordo.DataVencimento }}
+                    <div class="col-6 col-md-2">
+                         {{ acordo.ParcelasAcordo.ParcelaAcordo.DataVencimento }}
                         </div>
-                        <div class="col-6 col-md-3 no-padd-right bottom-parcela">
+                        <div class="col-6 col-md-2 no-padd-right bottom-parcela">
                             Status: {{ acordo.ParcelasAcordo.ParcelaAcordo.StatusParcelaAcordo }}
                         </div>
-                        <div class="col-5 col-md-2 no-padd-right">
-                            Valor: R$ {{ acordo.ParcelasAcordo.ParcelaAcordo.ValorParcela }}
+                        <div class="col-4 col-md-2 no-padd-right">
+                           R$ {{ acordo.ParcelasAcordo.ParcelaAcordo.ValorParcela }}
                         </div>
-                        <div class="col-5 col-md-2 no-padd-right no-padd-left">
+                        <div class="col-4 col-md-2 no-padd-right">
                             <a type="button" class="btn btn-primary padd-mobile btn-segunda" (click)="segunda_via(acordo.CodigoAcordo, acordo.ParcelasAcordo.ParcelaAcordo.CodigoParcelaAcordo, acordo.NumeroTitulo, 0)">
-                                Segunda via do boleto        
+                                Ver segunda via do boleto        
+                            </a>                          
+                            <div class="erro-boleto" *ngIf="erroBoleto">Houve um erro. Tente novamente, por favor.</div>  
+                        </div>
+                        <div class="col-4 col-md-2 no-padd-right">
+                            <a type="button" class="btn btn-primary padd-mobile btn-segunda" (click)="pegarEmail(0)">
+                                Enviar por e-mail        
+                            </a>                          
+                            <div class="erro-boleto" *ngIf="erroBoleto">Houve um erro. Tente novamente, por favor.</div>  
+                        </div>
+                        
+                        <div class="col-4 col-md-2 no-padd-right">
+                            <a type="button" class="btn btn-primary padd-mobile btn-segunda" (click)="pegarTelefone(0, acordo.CodigoAcordo, acordo.CodigoTitulo)">
+                                Enviar por SMS        
                             </a>                          
                             <div class="erro-boleto" *ngIf="erroBoleto">Houve um erro. Tente novamente, por favor.</div>  
                         </div>
