--- a/src/app/cpf-cnpj-box/cpf-cnpj-box.component.css
+++ b/src/app/cpf-cnpj-box/cpf-cnpj-box.component.css
@@ -8,7 +8,7 @@
 }
 
 .tela-grid {
-    background: url('~/landingpage/assets/img/back.jpg') 100% 50% no-repeat;
+    background: url('~/assets/img/back.jpg') 100% 50% no-repeat;
     height: 100%;
     position: relative;
     background-size: cover;
