--- a/src/app/acordos-andamento/acordos-andamento.component.css
+++ b/src/app/acordos-andamento/acordos-andamento.component.css
@@ -31,11 +31,17 @@ button {
     }
 
     .bottom-parcela {
-      margin-bottom: 0px;            
+      margin-bottom: 0px; 
+      
     }
     
+    .parcela-border {
+        border-bottom: 1px solid rgba(0,0,0,.125);     
+        margin-bottom: 5px;      
+    }
+
     .btn-segunda {
-        margin-bottom: 30px;
+        /*margin-bottom: 30px;*/
     }
 
     @media (max-width: 768px) {
@@ -48,7 +54,7 @@ button {
         }
 
         .bottom-parcela {
-            margin-bottom: 40px;            
+            margin-bottom: 10px;            
           }
         
         .btn-accordion {
@@ -93,6 +99,8 @@ button {
         }
     
         .btn-segunda {
-            margin-bottom: 0px;
+            /*margin-bottom: 0px;
+            margin-top: -20px;*/
+            margin-bottom: 5px;
         }
     }    
