--- a/src/app/boleto/boleto.component.html
+++ b/src/app/boleto/boleto.component.html
@@ -51,20 +51,14 @@
           <TD colspan=2 class=BoletoValorDireito>{{ data }}</TD>
         </TR>   
         <TR>
-          <TD colspan=3 class=BoletoTituloEsquerdo>Data do Documento</TD>
-          <TD colspan=4 class=BoletoTituloEsquerdo>Número do Documento</TD>
-          <TD class=BoletoTituloEsquerdo>Espécie</TD>
-          <TD class=BoletoTituloEsquerdo>Aceite</TD>
-          <TD class=BoletoTituloEsquerdo>Data do Processamento</TD>
-          <TD class=BoletoTituloDireito>Nosso Número</TD>
+          <TD colspan=4 class=BoletoTituloEsquerdo>Data do Documento</TD>
+          <TD colspan=3 class=BoletoTituloEsquerdo>Espécie</TD>
+          <TD colspan=4 class=BoletoTituloEsquerdo>Data do Processamento</TD>
         </TR>
         <TR>
-          <TD colspan=3 class=BoletoValorEsquerdo>DataDoDoc</TD>
-          <TD colspan=4 class=BoletoValorEsquerdo>NumeroDodoc</TD>
-          <TD class=BoletoValorEsquerdo>RC</TD>
-          <TD class=BoletoValorEsquerdo>N</TD>
-          <TD class=BoletoValorEsquerdo>DataDoProces</TD>
-          <TD class=BoletoValorDireito>NossoNumero</TD>
+          <TD colspan=4 class=BoletoValorEsquerdo>{{ hoje }}</TD>
+          <TD colspan=3 class=BoletoValorEsquerdo>RC</TD>
+          <TD colspan=4 class=BoletoValorEsquerdo>{{ hoje }}</TD>
         </TR>  
           
         <TR>
