--- a/src/app/acordos-andamento/acordos-andamento.component.html
+++ b/src/app/acordos-andamento/acordos-andamento.component.html
@@ -1,5 +1,5 @@
-<div *ngIf="sucessoEmail" class="mb-15">
-    <h1>E-mail enviado com sucesso!</h1>
+<div *ngIf="emailRes" class="mb-15">
+    <h1>{{ emailRes }}</h1>
 </div>
   
 <div *ngIf="porEmail">
@@ -7,8 +7,8 @@
     <app-input-email (clickEnviar)="enviarEmail()" (clickVoltar)="voltarEmail()"></app-input-email>
 </div>
   
-<div *ngIf="sucessoSms" class="mb-15">
-  <h1>SMS enviado com sucesso!</h1>
+<div *ngIf="smsRes" class="mb-15">
+  <h1>SMS enviado: {{ smsRes }}</h1>
 </div>
 
 <div *ngIf="porSms">
@@ -57,7 +57,7 @@
                         <div class="erro-boleto" *ngIf="erroBoleto">Houve um erro. Tente novamente, por favor.</div>
                     </div>
                     <div class="col-4 col-md-2 no-padd-right">
-                        <a type="button" class="btn btn-primary padd-mobile btn-segunda" (click)="pegarEmail(ind)">
+                        <a type="button" class="btn btn-primary padd-mobile btn-segunda" (click)="pegarEmail(ind, acordo.CodigoAcordo, acordo.CodigoTitulo, acordo.NumeroTitulo)">
                             Enviar por e-mail        
                         </a>                          
                         <div class="erro-boleto" *ngIf="erroBoleto">Houve um erro. Tente novamente, por favor.</div>  
@@ -93,7 +93,7 @@
                             <div class="erro-boleto" *ngIf="erroBoleto">Houve um erro. Tente novamente, por favor.</div>  
                         </div>
                         <div class="col-4 col-md-2 no-padd-right">
-                            <a type="button" class="btn btn-primary padd-mobile btn-segunda" (click)="pegarEmail(0)">
+                            <a type="button" class="btn btn-primary padd-mobile btn-segunda" (click)="pegarEmail(0, acordo.CodigoAcordo, acordo.CodigoTitulo, acordo.NumeroTitulo)">
                                 Enviar por e-mail        
                             </a>                          
                             <div class="erro-boleto" *ngIf="erroBoleto">Houve um erro. Tente novamente, por favor.</div>  
