--- a/src/app/opcoes-routlet/opcoes-routlet.component.html
+++ b/src/app/opcoes-routlet/opcoes-routlet.component.html
@@ -4,7 +4,8 @@
  
     <div class="back-beje col-lg-9">
                             
-            <p class="link-voltar btn-link" (click)="voltarMenu()" *ngIf="!showOpcoes">Voltar ao Menu Principal</p>        
+            <p class="link-voltar btn-link" (click)="voltarMenu()" [hidden]="showOpcoes || apiRestService.telaFinal">Voltar ao Menu Principal</p>        
+            <p class="link-voltar btn-link" (click)="voltarInicio()" *ngIf="apiRestService.telaFinal">Fazer nova consulta de CPF ou CNPJ</p>        
             <img src="assets/img/logo.png" alt="Claro" class="logo" [hidden]="logo_menor">
             
             <app-negocie-online *ngIf="showNegocieOnline"></app-negocie-online>
