--- a/src/app/prazo-finalizacao/prazo-finalizacao.component.html
+++ b/src/app/prazo-finalizacao/prazo-finalizacao.component.html
@@ -8,7 +8,7 @@
 </div>
   
 <div *ngIf="smsRes" class="mb-15">
-  <h1>SMS enviado: {{ smsRes }}</h1>
+  <h1>SMS enviado</h1>
 </div>
 
 <div *ngIf="porSms">
