--- a/src/app/acordos-andamento/acordos-andamento.component.html
+++ b/src/app/acordos-andamento/acordos-andamento.component.html
@@ -72,8 +72,9 @@
                             <div class="loader" *ngIf="loadingBoleto[ind]"></div>
                         </div>    
                     </div>
+                    <div class="erro-boleto red" *ngIf="erroBoleto[ind]">Houve um erro. Tente novamente, por favor.</div>
             </div>
-            <div class="erro-boleto" *ngIf="erroBoleto">Houve um erro. Tente novamente, por favor.</div>
+            
          </div>
          <div *ngIf="acordo.ParcelasAcordo.ParcelaAcordo.CodigoParcelaAcordo" class="row parcela-border">
                     <div class="col-6 col-md-2">
@@ -89,20 +90,17 @@
                             <a type="button" class="btn btn-primary padd-mobile btn-segunda back-red" (click)="segunda_via(acordo.CodigoAcordo, acordo.ParcelasAcordo.ParcelaAcordo.CodigoParcelaAcordo, acordo.NumeroTitulo, 0)">
                                 Ver segunda via do boleto        
                             </a>                          
-                            <div class="erro-boleto" *ngIf="erroBoleto">Houve um erro. Tente novamente, por favor.</div>  
                         </div>
                         <div class="col-4 col-md-2 no-padd-right">
                             <a type="button" class="btn btn-primary padd-mobile btn-segunda back-red" (click)="pegarEmail(0, acordo.CodigoAcordo, acordo.CodigoTitulo, acordo.NumeroTitulo)">
                                 Enviar por e-mail        
                             </a>                          
-                            <div class="erro-boleto" *ngIf="erroBoleto">Houve um erro. Tente novamente, por favor.</div>  
                         </div>
                         
                         <div class="col-4 col-md-2 no-padd-right">
                             <a type="button" class="btn btn-primary padd-mobile btn-segunda back-red" (click)="pegarTelefone(0, acordo.CodigoAcordo, acordo.CodigoTitulo)">
                                 Enviar por SMS        
                             </a>                          
-                            <div class="erro-boleto" *ngIf="erroBoleto">Houve um erro. Tente novamente, por favor.</div>  
                         </div>
                         <div class="col-2 col-md-1">
                             <div class="loader-wrap">
@@ -110,6 +108,8 @@
                             </div>    
                         </div>    
             </div>
-        </div>    
+            
+        
+        </div> 
     </accordion-group>
 </accordion>
