--- a/src/app/input-tel/input-tel.component.html
+++ b/src/app/input-tel/input-tel.component.html
@@ -1,6 +1,6 @@
 <div class="form-group">
     <div class="tel-box"> <!-- col-sm-8-->        
-        <input type="text" [textMask]="{mask: telMask}" class="form-control" aria-describedby="emailHelp" placeholder="(DDD) TELEFONE" [(ngModel)]="tel" (input)="cleanAlerts()"> <br>
+        <input type="text" [textMask]="{mask: telMask}" class="form-control" aria-describedby="emailHelp" placeholder="(DDD) TELEFONE" [(ngModel)]="tel" (input)="cleanAlerts()" (keydown.enter)="envia()"> <br>
             <button type="submit" class="col-sm-3" (click)="envia()">Enviar</button>
             <button class="col-sm-3 float-right" (click)="voltar()">Voltar</button>
         
